[package]
name = "axum-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros", "http2", "tracing", "multipart"] }
tokio = { version = "1.29.1", features = ["full"] }
